code cleanup and initial results